force-app/main/default/objects/BilendiAccounting__c/BilendiAccounting__c.object-meta.xml
<CustomObject>
    <label>BilendiAccounting</label>
    <nameField>
        <label>ID Ecriture</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BilendiAccountings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>