force-app/main/default/objects/BilendiAccounting__c/fields/CodePrestation__c.field-meta.xml
<CustomField>
    <fullName>CodePrestation__c</fullName>
    <label>Code Prestation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>AB</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>DO</fullName>
            </value>
            <value>
                <fullName>RA</fullName>
            </value>
            <value>
                <fullName>RM</fullName>
            </value>
            <value>
                <fullName>2A</fullName>
            </value>
            <value>
                <fullName>2B</fullName>
            </value>
            <value>
                <fullName>2C</fullName>
            </value>
            <value>
                <fullName>2O</fullName>
            </value>
            <value>
                <fullName>2R</fullName>
            </value>
            <value>
                <fullName>2M</fullName>
            </value>
            <value>
                <fullName>3A</fullName>
            </value>
            <value>
                <fullName>3B</fullName>
            </value>
            <value>
                <fullName>3C</fullName>
            </value>
            <value>
                <fullName>3O</fullName>
            </value>
            <value>
                <fullName>3R</fullName>
            </value>
            <value>
                <fullName>3M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>