force-app/main/default/objects/BilendiAccounting__c/fields/CodeRejet__c.field-meta.xml
<CustomField>
    <fullName>CodeRejet__c</fullName>
    <label>CodeRejet</label>
    <length>10</length>
    <type>Text</type>
</CustomField>