force-app/main/default/objects/BilendiAccounting__c/fields/Commentaire__c.field-meta.xml
<CustomField>
    <fullName>Commentaire__c</fullName>
    <label>Commentaire</label>
    <length>50</length>
    <type>Text</type>
</CustomField>