force-app/main/default/objects/BilendiAccounting__c/fields/ContratId__c.field-meta.xml
<CustomField>
    <fullName>ContratId__c</fullName>
    <label>Contrat ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>