force-app/main/default/objects/BilendiAccounting__c/fields/DateInsertionBase__c.field-meta.xml
<CustomField>
    <fullName>DateInsertionBase__c</fullName>
    <label>Date Insertion Base</label>
    <type>Date</type>
</CustomField>