force-app/main/default/objects/BilendiAccounting__c/fields/DateValeur__c.field-meta.xml
<CustomField>
    <fullName>DateValeur__c</fullName>
    <label>Date Valeur</label>
    <type>Date</type>
</CustomField>