force-app/main/default/objects/BilendiAccounting__c/fields/DateVisibiliteTins__c.field-meta.xml
<CustomField>
    <fullName>DateVisibiliteTins__c</fullName>
    <label>Date Visibilite Tins</label>
    <type>Date</type>
</CustomField>