force-app/main/default/objects/BilendiAccounting__c/fields/DateVisibiliteTotem__c.field-meta.xml
<CustomField>
    <fullName>DateVisibiliteTotem__c</fullName>
    <label>Date Visibilite Totem</label>
    <type>Date</type>
</CustomField>