force-app/main/default/objects/BilendiAccounting__c/fields/IsFirst__c.field-meta.xml
<CustomField>
    <fullName>IsFirst__c</fullName>
    <label>Is First</label>
    <length>1</length>
    <type>Text</type>
</CustomField>