force-app/main/default/objects/BilendiAccounting__c/fields/LieuId__c.field-meta.xml
<CustomField>
    <fullName>LieuId__c</fullName>
    <label>Lieu Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>