force-app/main/default/objects/BilendiAccounting__c/fields/ModePaiement__c.field-meta.xml
<CustomField>
    <fullName>ModePaiement__c</fullName>
    <label>ModePaiement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>