force-app/main/default/objects/BilendiAccounting__c/fields/MontantNL__c.field-meta.xml
<CustomField>
    <fullName>MontantNL__c</fullName>
    <label>MontantNL</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>