force-app/main/default/objects/BilendiAccounting__c/fields/Origine__c.field-meta.xml
<CustomField>
    <fullName>Origine__c</fullName>
    <label>Origine</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>