force-app/main/default/objects/BilendiAccounting__c/fields/PieceReferenceId__c.field-meta.xml
<CustomField>
    <fullName>PieceReferenceId__c</fullName>
    <label>Piece Reference ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>