force-app/main/default/objects/BilendiAccounting__c/fields/RUM__c.field-meta.xml
<CustomField>
    <fullName>RUM__c</fullName>
    <label>RUM</label>
    <length>20</length>
    <type>Text</type>
</CustomField>