force-app/main/default/objects/BilendiAccounting__c/fields/StatutEnvoi__c.field-meta.xml
<CustomField>
    <fullName>StatutEnvoi__c</fullName>
    <label>StatutEnvoi</label>
    <length>2</length>
    <type>Text</type>
</CustomField>