force-app/main/default/objects/BilendiAccounting__c/fields/TypePiece__c.field-meta.xml
<CustomField>
    <fullName>TypePiece__c</fullName>
    <label>Type Piece</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SLINVM</fullName>
            </value>
            <value>
                <fullName>SLREFDM</fullName>
            </value>
            <value>
                <fullName>SLJRNM</fullName>
            </value>
            <value>
                <fullName>SLCASHM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>