force-app/main/default/objects/BilendiAccounting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CodePrestation__c</columns>
    <columns>CodeRejet__c</columns>
    <columns>Commentaire__c</columns>
    <columns>ContratId__c</columns>
    <columns>DateValeur__c</columns>
    <columns>DateVisibiliteTotem__c</columns>
    <columns>ModePaiement__c</columns>
    <columns>Montant__c</columns>
    <columns>Origine__c</columns>
    <columns>TypePiece__c</columns>
    <columns>DateInsertionBase__c</columns>
    <columns>DateVisibiliteTins__c</columns>
    <columns>RUM__c</columns>
    <columns>PieceReferenceId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>